[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Sprites/Player/Ready/ready_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Player/Ready/ready_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player/Ready/ready_3.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Player/Run/run_5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player/Run/run_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player/Run/run_6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player/Run/run_4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player/Run/run_3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player/Run/run_1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player/Attack/attack1_5.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player/Attack/attack1_1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player/Attack/attack1_2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player/Attack/attack1_3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player/Attack/attack1_4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Player/Attack/attack1_6.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Player/Jump/jump_5.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Player/Jump/jump_4.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Player/Jump/jump_2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Player/Jump/jump_1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Player/Jump/jump_3.png" type="Texture" id=21]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=23]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 16 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.25, 0.75 )

[sub_resource type="CapsuleShape2D" id=6]
height = 16.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 12.0

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 2, 0 )
collision_layer = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 24 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 6 )

[node name="SwordHitbox" parent="." instance=ExtResource( 23 )]
collision_mask = 8

[node name="CollisionShape2D" parent="SwordHitbox" index="0"]
position = Vector2( -21, -7 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="SwordHitbox"]
